more spacing fixes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -224,11 +224,11 @@ legend {
 }
 
 hr {
-    margin: 15px 0;
+    margin: 25px 0;
 }
 
 .form-group {
-    margin: 8px 0;
+    margin: 0 0 20px;
 }
 
 .form-group:last-of-type {
